[package]
name = "rust-cli"
version = "0.1.0"
authors = ["Karan Godara <karan@getquilt.app>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
ureq = { version = "2.0.1", features = ["json", "charset"] }
serde_json = "1.0"
tui = "0.14.0"
termion = "1.5.6"
log = "0.4"
simplelog = "^0.7.6"
colorsys = "0.6.3"
dotenv = "0.15.0"
thiserror = "1.0.24"