[package]
name = "rust-cli"
version = "0.1.0"
authors = ["Karan Godara <karan@getquilt.app>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "redactions"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3


[dependencies]
clap = "3.0.0-beta.2"
ureq = { version = "2.0.1", features = ["json", "charset"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
crossterm = "0.21.0"
sled = "0.34.7"
futures = "0.3.19"
tokio-test = "0.4.2"
log = "0.4"
simplelog = "^0.7.6"
colorsys = "0.6.3"
dotenv = "0.15.0"
thiserror = "1.0.24"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version =  "1.2.0", features = ["full"] }
lazy_static = "1.4.0"
chrono = "0.4"
textwrap = "0.14"
unicode-segmentation = "1.8.0"
unicode-width = "0.1.8"
dirs = "3.0.2"